--- a/style.css
+++ b/style.css
@@ -562,10 +562,13 @@ font-weight: 400;
      .play-music-area {
 
     align-items:center;
-    padding-top: 14px;
+    padding-top: 0px;
      }
      .song-extra-control>img {
         height: 2.2vh;
+     }
+     .song-extra-control{
+        margin-right: 4px;
      }
      .song-playing-name>h4 {
     font-size: 12px;
@@ -596,4 +599,9 @@ font-weight: 400;
      .song-control-lower>p {
      font-size: 9px;
      }
+         #volume {
+          
+             width: 20%;
+            
+         }
 }
